Text of element with role="alert" not included in description when referenced by aria-describedby
Categories
(Core :: Disability Access APIs, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox75 | --- | fixed |
People
(Reporter: Jamie, Assigned: Jamie)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
Comment 1•7 years ago
|
||
Comment 2•6 years ago
|
||
Step 2F of accname-1.1 states "Otherwise, if the current node's role allows name from content, or if the current node is referenced by aria-labelledby, aria-describedby, or is a native host language text alternative element (e.g. label in HTML), or is a descendant of a native host language text alternative element..."
The key is "Or if the current node is referenced by aria-labelledby, aria-describedby..."
Therefore I read that to mean that this issue is valid. Yes, role="alert" will get its accessible name from the author, but when it doesn't have a name from the author and is referenced via aria-describedby, its contents must be returned.
Is my understanding correct?
Comment 3•6 years ago
|
||
I tested several different screen reader / browser combinations. JAWS supports this pattern, while others do not, so clarification would be helpful. Details are at https://a11ysupport.io/tests/tech__aria__aria_describedby_with_role_alert
| Assignee | ||
Comment 4•5 years ago
|
||
Updated•5 years ago
|
Comment 6•5 years ago
|
||
| bugherder | ||
Description
•