Bug 1505974: Include the subtree of role="alert" when referenced by aria-labelledby/describedby. r=MarcoZ

Differential Revision: https://phabricator.services.mozilla.com/D63037